--- a/webpizza/applipizza/templates/applipizza/pizza.html
+++ b/webpizza/applipizza/templates/applipizza/pizza.html
@@ -1,27 +1,5 @@
-<!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>les pizzas</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <div> <a href="/pizza/"> Les pizzas</a> </div>
-                <div> <a href="/ingredients/"> Les ingredients</a> </div>
-            </nav>
-        </header>
+{% extends "applipizza/base.html" %} {% block title %} les pizzas {% endblock %}
+{% block main %}
 
-        <main>
-            <h2>Voici nos {{pizzas|length}}</h2>
-            <ul>
-                {% for piz in pizzas %}
-                <li>{{piz}}</li>
-                {% endfor %}
-            </ul>
-        </main>
-        <footer>
-            © Appli Pizza 2023 ©
-        </footer>
-    </body>
-</html>
+<p>La pizza n° {{pizza}}</p>
+{% endblock %}
