--- a/webpizza/applipizza/templates/applipizza/pizzas.html
+++ b/webpizza/applipizza/templates/applipizza/pizzas.html
@@ -1,9 +1,10 @@
 {% extends "applipizza/base.html" %} {% block title %} les pizzas {% endblock %}
 {% block main %}
-<h2>Voici nos {{ingredients|length}} ingredient(s)</h2>
+
+<h2>Voici nos {{pizzas|length}} pizza(s)</h2>
 <ul>
-  {% for ing in ingredients %}
-  <li>{{ing}}</li>
+  {% for piz in pizzas %}
+  <li>{{piz}}</li>
   {% endfor %}
 </ul>
 {% endblock %}
