Ajout pizza et ingredient

--- a/webpizza/applipizza/templates/applipizza/ingredients.html
+++ b/webpizza/applipizza/templates/applipizza/ingredients.html
@@ -1,4 +1,4 @@
-{% extends "applipizza/base.html" %} {% block title %} les pizzas {% endblock %}
+{% extends "applipizza/base.html" %} {% block title %} les ingredients {% endblock %}
 {% block main %}
 <h2>Voici nos {{ingredients|length}} ingredient(s)</h2>
 <ul>
