--- a/webpizza/applipizza/templates/applipizza/menu.html
+++ b/webpizza/applipizza/templates/applipizza/menu.html
@@ -25,6 +25,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/ingredients/">les ingrédients</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/ingredient/add">Ajouter un Ingredient</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  href="/pizza/add" >Ajouter une Pizza</a>
+        </li>
       </ul>
     </div>
   </div>
