ajout de la focntionaliter pour ajouter des ingredients

--- a/webpizza/applipizza/templates/applipizza/menu.html
+++ b/webpizza/applipizza/templates/applipizza/menu.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="/ingredient/add">Ajouter un Ingredient</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  href="/pizza/add" >Ajouter une Pizza</a>
+          <a class="nav-link"  href="/pizza/add" >Ajouter une Pizza2ZZZ</a>
         </li>
       </ul>
     </div>
