--- a/webpizza/applipizza/templates/applipizza/base.html
+++ b/webpizza/applipizza/templates/applipizza/base.html
@@ -3,7 +3,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device.width, initial-scale=1" />
+   <!-- <meta name="viewport" content="width=device.width, initial-scale=1" />-->
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'applipizza/css/styles.css' %}" />
     <link rel="icon" href="{% static 'applipizza/img/logo.ico' %}" />
@@ -25,7 +25,10 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
-    ></script>
+    >
+    
+
+  </script>
   </body>
 </html>
 
